# simplexim

./: Makefile.am  README  config.h.in  configure  configure.ac  dp-xims-window.c  dp-xims-window.h  dp-xims.c  dp-xims.h  main.c  simplewindow.c  simplexim.c  simplexim.h
IMdkit/: Makefile.am
